--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
     "gulp-sass": "^4.1.0",
     "gulp-uglify": "^3.0.2",
     "jquery": "^3.5.1"
+  },
+  "dependencies": {
+    "firebase": "^8.2.9"
   }
 }
